--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,160 +212,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prompt_id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>author</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Doh'tlec reviewed his message . It did n't nee...</td>\n",
-       "      <td>reddit</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>We spoke to them in images . It was the only w...</td>\n",
-       "      <td>reddit</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>`` The Savage within… '' those three words see...</td>\n",
-       "      <td>reddit</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>It was a last resort . &lt;newline&gt; &lt;newline&gt; &lt;ne...</td>\n",
-       "      <td>reddit</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>You ’ ll give us your ships . We ’ ll win your...</td>\n",
-       "      <td>reddit</td>\n",
-       "      <td>human</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11195</th>\n",
-       "      <td>7</td>\n",
-       "      <td>**The Time Laughter Saved a Road Trip**\\n\\nA f...</td>\n",
-       "      <td>hewlett</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11196</th>\n",
-       "      <td>7</td>\n",
-       "      <td>**Title: The Laughter-Filled Road Trip**\\n\\nDu...</td>\n",
-       "      <td>hewlett</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11197</th>\n",
-       "      <td>7</td>\n",
-       "      <td>**The Laughter-Filled Road Trip**\\n\\nSeveral y...</td>\n",
-       "      <td>hewlett</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11198</th>\n",
-       "      <td>7</td>\n",
-       "      <td>As college roommates, my friend Maya and I oft...</td>\n",
-       "      <td>hewlett</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11199</th>\n",
-       "      <td>7</td>\n",
-       "      <td>**Title: The Laughter-Filled Reunion**\\n\\nDuri...</td>\n",
-       "      <td>hewlett</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11200 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       prompt_id                                               text  dataset  \\\n",
-       "0              0  Doh'tlec reviewed his message . It did n't nee...   reddit   \n",
-       "1              0  We spoke to them in images . It was the only w...   reddit   \n",
-       "2              0  `` The Savage within… '' those three words see...   reddit   \n",
-       "3              0  It was a last resort . <newline> <newline> <ne...   reddit   \n",
-       "4              0  You ’ ll give us your ships . We ’ ll win your...   reddit   \n",
-       "...          ...                                                ...      ...   \n",
-       "11195          7  **The Time Laughter Saved a Road Trip**\\n\\nA f...  hewlett   \n",
-       "11196          7  **Title: The Laughter-Filled Road Trip**\\n\\nDu...  hewlett   \n",
-       "11197          7  **The Laughter-Filled Road Trip**\\n\\nSeveral y...  hewlett   \n",
-       "11198          7  As college roommates, my friend Maya and I oft...  hewlett   \n",
-       "11199          7  **Title: The Laughter-Filled Reunion**\\n\\nDuri...  hewlett   \n",
-       "\n",
-       "                       author  \n",
-       "0                       human  \n",
-       "1                       human  \n",
-       "2                       human  \n",
-       "3                       human  \n",
-       "4                       human  \n",
-       "...                       ...  \n",
-       "11195  gpt-4-turbo-2024-04-09  \n",
-       "11196  gpt-4-turbo-2024-04-09  \n",
-       "11197  gpt-4-turbo-2024-04-09  \n",
-       "11198  gpt-4-turbo-2024-04-09  \n",
-       "11199  gpt-4-turbo-2024-04-09  \n",
-       "\n",
-       "[11200 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,8 +272,8 @@
     "    z_scores_test = z_scores_transformer.transform(df_test[\"text\"])\n",
     "\n",
     "    param_grid = {\n",
-    "        \"C\": [0.001, 0.01, 0.1],\n",
-    "        \"solver\": [\"lbfgs\"],\n",
+    "        \"C\": [0.001, 0.003, 0.01, 0.03, 0.1, 0.3, 1.0],\n",
+    "        \"solver\": [\"lbfgs\", \"liblinear\"],\n",
     "    }\n",
     "\n",
     "    model = GridSearchCV(\n",
@@ -461,23 +307,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 12/630 [01:13<1:02:55,  6.11s/it]\n"
+      "  0%|          | 0/21 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 21/21 [00:00<00:00, 103.46it/s]\n"
      ]
     }
    ],
    "source": [
-    "from itertools import product\n",
-    "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
     "import os\n",
     "import pandas as pd\n",
+    "from itertools import product\n",
+    "from joblib import Parallel, delayed\n",
     "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "N_TRIALS = 30\n",
     "\n",
@@ -486,7 +342,7 @@
     "    (author1, author2), trial = pair_trial\n",
     "    df_test = classify(\n",
     "        df=df,\n",
-    "        authors=[HUMAN, GEMINI_10],\n",
+    "        authors=[author1, author2],\n",
     "        function_words=function_words,\n",
     "    )\n",
     "    accuracy = sum(df_test[\"author\"] == df_test[\"author_pred\"]) / len(df_test)\n",
@@ -500,18 +356,26 @@
     "\n",
     "results_filename = \"classification_results/pairwise.csv\"\n",
     "if not os.path.exists(results_filename):\n",
+    "    # Run in parallel using joblib\n",
     "    pairs_trials = list(product(PAIRS, range(N_TRIALS)))\n",
-    "    results = []\n",
+    "    results = Parallel(n_jobs=-1)(\n",
+    "        delayed(process_pair)(pair_trial) for pair_trial in tqdm(pairs_trials)\n",
+    "    )\n",
     "\n",
-    "    with ProcessPoolExecutor(max_workers=os.cpu_count()) as executor:\n",
-    "        futures = [\n",
-    "            executor.submit(process_pair, pair_trial) for pair_trial in pairs_trials\n",
-    "        ]\n",
-    "        for future in tqdm(as_completed(futures), total=len(futures)):\n",
-    "            results.append(future.result())\n",
-    "\n",
+    "    # Save results\n",
     "    df_results = pd.DataFrame(results)\n",
-    "    df_results.to_csv(results_filename, index=False)"
+    "    df_results.to_csv(results_filename, index=False)\n",
+    "\n",
+    "    # Create heatmap\n",
+    "    pivot = df_results.pivot(\n",
+    "        index=\"author1\", columns=\"author2\", values=\"accuracy\"\n",
+    "    ).reindex(index=AUTHORS, columns=AUTHORS)\n",
+    "\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.heatmap(pivot, annot=True, vmin=0.5, vmax=1.0, cmap=\"viridis\")\n",
+    "    plt.title(\"Binary Logistic Regression Accuracies\")\n",
+    "    plt.savefig(\"figures/pairwise/classification/heatmap.png\")\n",
+    "    plt.close()"
    ]
   }
  ],
