--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,19 +215,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pipeline"
+    "# Classification pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,12 +295,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Binary (all 21 pairs)"
+    "## Pairwise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,12 +374,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author1</th>\n",
+       "      <th>author2</th>\n",
+       "      <th>trial</th>\n",
+       "      <th>accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>human</td>\n",
+       "      <td>gemini-1.0-pro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.96125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>human</td>\n",
+       "      <td>gemini-1.0-pro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.97750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>human</td>\n",
+       "      <td>gemini-1.0-pro</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.97125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>human</td>\n",
+       "      <td>gemini-1.0-pro</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.98250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>human</td>\n",
+       "      <td>gemini-1.0-pro</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.95750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>625</th>\n",
+       "      <td>gpt-3.5-turbo-0125</td>\n",
+       "      <td>gpt-4-turbo-2024-04-09</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.89250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>626</th>\n",
+       "      <td>gpt-3.5-turbo-0125</td>\n",
+       "      <td>gpt-4-turbo-2024-04-09</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.76625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>627</th>\n",
+       "      <td>gpt-3.5-turbo-0125</td>\n",
+       "      <td>gpt-4-turbo-2024-04-09</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.85000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628</th>\n",
+       "      <td>gpt-3.5-turbo-0125</td>\n",
+       "      <td>gpt-4-turbo-2024-04-09</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.82000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>629</th>\n",
+       "      <td>gpt-3.5-turbo-0125</td>\n",
+       "      <td>gpt-4-turbo-2024-04-09</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.83125</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>630 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                author1                 author2  trial  accuracy\n",
+       "0                 human          gemini-1.0-pro      0   0.96125\n",
+       "1                 human          gemini-1.0-pro      1   0.97750\n",
+       "2                 human          gemini-1.0-pro      2   0.97125\n",
+       "3                 human          gemini-1.0-pro      3   0.98250\n",
+       "4                 human          gemini-1.0-pro      4   0.95750\n",
+       "..                  ...                     ...    ...       ...\n",
+       "625  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     25   0.89250\n",
+       "626  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     26   0.76625\n",
+       "627  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     27   0.85000\n",
+       "628  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     28   0.82000\n",
+       "629  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     29   0.83125\n",
+       "\n",
+       "[630 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Word frequencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
