--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pairwise"
+    "# Pairwise"
    ]
   },
   {
@@ -312,24 +312,33 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from json import dumps\n",
     "\n",
-    "N_TRIALS = 30\n",
+    "N_TRIALS = 2\n",
     "\n",
     "\n",
     "def process_pair(pair_trial):\n",
     "    (author1, author2), trial = pair_trial\n",
-    "    df_test = classify(\n",
+    "    df_test, df_coefs = classify(\n",
     "        df=df,\n",
     "        authors=[author1, author2],\n",
     "        function_words=function_words,\n",
+    "        return_df_coefs=True,\n",
     "    )\n",
+    "\n",
     "    accuracy = sum(df_test[\"author\"] == df_test[\"author_pred\"]) / len(df_test)\n",
-    "    return {\n",
+    "    df_test_json = dumps(df_test.to_json(orient=\"records\"))\n",
+    "    df_coefs_json = dumps(df_coefs.to_json(orient=\"records\"))\n",
+    "\n",
+    "    df_results = {\n",
     "        \"author1\": author1,\n",
     "        \"author2\": author2,\n",
     "        \"trial\": trial,\n",
     "        \"accuracy\": accuracy,\n",
+    "        \"df_test\": df_test_json,\n",
+    "        \"df_coefs\": df_coefs_json,\n",
     "    }\n",
+    "    return df_results\n",
     "\n",
     "\n",
     "results_filename = \"results/pairwise_classification.csv\"\n",
@@ -347,13 +356,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "pivot = (\n",
-    "    df_results.groupby([\"author1\", \"author2\"])\n",
+    "    df_results[[\"author1\", \"author2\", \"accuracy\"]]\n",
+    "    .groupby([\"author1\", \"author2\"])\n",
     "    .mean()\n",
     "    .reset_index()\n",
     "    .pivot(index=\"author1\", columns=\"author2\", values=\"accuracy\")\n",
@@ -374,148 +391,186 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Heatmaps"
+    "## Confusion matrices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from json import loads\n",
+    "from io import StringIO\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "df_cms = []\n",
+    "for _, (author1, author2, trial, accuracy, df_test, df_coefs) in df_results.iterrows():\n",
+    "    df_test = pd.read_json(StringIO(loads(df_test)))\n",
+    "\n",
+    "    cm = confusion_matrix(df_test[\"author\"], df_test[\"author_pred\"], normalize=\"true\")\n",
+    "\n",
+    "    zero_zero = cm[0, 0]\n",
+    "    zero_one = cm[0, 1]\n",
+    "    one_zero = cm[1, 0]\n",
+    "    one_one = cm[1, 1]\n",
+    "\n",
+    "    df_cms.append(\n",
+    "        {\n",
+    "            \"author1\": author1,\n",
+    "            \"author2\": author2,\n",
+    "            \"zero_zero\": zero_zero,\n",
+    "            \"zero_one\": zero_one,\n",
+    "            \"one_zero\": one_zero,\n",
+    "            \"one_one\": one_one,\n",
+    "        }\n",
+    "    )\n",
+    "df_cms = pd.DataFrame(df_cms)\n",
+    "df_cms.groupby([\"author1\", \"author2\"]).mean().reset_index()\n",
+    "\n",
+    "for _, (author1, author2, z_z, z_o, o_z, o_o) in df_cms.iterrows():\n",
+    "    authors = [author1, author2]\n",
+    "    cm = np.array([[z_z, z_o], [o_z, o_o]])\n",
+    "    cm = pd.DataFrame(cm, index=authors, columns=authors)\n",
+    "\n",
+    "    classification_figname = (\n",
+    "        f\"figures/pairwise/classification/confusion_matrices/{author1}_{author2}.png\"\n",
+    "    )\n",
+    "    sns.heatmap(cm, annot=True, vmin=0, vmax=1)\n",
+    "    plt.title(\"Average Confusion Matrix for Binary Logistic Regression\")\n",
+    "    plt.ylabel(\"True author\")\n",
+    "    plt.xlabel(\"Predicted author\")\n",
+    "    plt.savefig(classification_figname, bbox_inches=\"tight\")\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average word coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from json import loads\n",
+    "from io import StringIO\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "df_coefs_list = []\n",
+    "for i, (author1, author2, trial, accuracy, df_test, df_coefs) in df_results.iterrows():\n",
+    "    df_coefs = pd.read_json(StringIO(loads(df_coefs)))\n",
+    "    df_coefs[\"i\"] = i\n",
+    "    df_coefs = df_coefs.pivot(index=\"i\", columns=\"word\", values=\"coef\")\n",
+    "    df_coefs[\"author1\"] = author1\n",
+    "    df_coefs[\"author2\"] = author2\n",
+    "    df_coefs_list.append(df_coefs)\n",
+    "\n",
+    "df_coefs_list = pd.concat(df_coefs_list).replace(np.nan, 0)\n",
+    "df_coefs_list = df_coefs_list.groupby([\"author1\", \"author2\"]).mean().abs()\n",
+    "df_coefs_list = df_coefs_list.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average coef\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author1</th>\n",
-       "      <th>author2</th>\n",
-       "      <th>trial</th>\n",
-       "      <th>accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>human</td>\n",
-       "      <td>gemini-1.0-pro</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.96125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>human</td>\n",
-       "      <td>gemini-1.0-pro</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.97750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>human</td>\n",
-       "      <td>gemini-1.0-pro</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.97125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>human</td>\n",
-       "      <td>gemini-1.0-pro</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.98250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>human</td>\n",
-       "      <td>gemini-1.0-pro</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.95750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>625</th>\n",
-       "      <td>gpt-3.5-turbo-0125</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.89250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>626</th>\n",
-       "      <td>gpt-3.5-turbo-0125</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0.76625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>627</th>\n",
-       "      <td>gpt-3.5-turbo-0125</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0.85000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>628</th>\n",
-       "      <td>gpt-3.5-turbo-0125</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0.82000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>629</th>\n",
-       "      <td>gpt-3.5-turbo-0125</td>\n",
-       "      <td>gpt-4-turbo-2024-04-09</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0.83125</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>630 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                author1                 author2  trial  accuracy\n",
-       "0                 human          gemini-1.0-pro      0   0.96125\n",
-       "1                 human          gemini-1.0-pro      1   0.97750\n",
-       "2                 human          gemini-1.0-pro      2   0.97125\n",
-       "3                 human          gemini-1.0-pro      3   0.98250\n",
-       "4                 human          gemini-1.0-pro      4   0.95750\n",
-       "..                  ...                     ...    ...       ...\n",
-       "625  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     25   0.89250\n",
-       "626  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     26   0.76625\n",
-       "627  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     27   0.85000\n",
-       "628  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     28   0.82000\n",
-       "629  gpt-3.5-turbo-0125  gpt-4-turbo-2024-04-09     29   0.83125\n",
-       "\n",
-       "[630 rows x 4 columns]"
+       "word\n",
+       "thru          0.002151\n",
+       "hereafter     0.002691\n",
+       "noone         0.002962\n",
+       "oftentimes    0.004042\n",
+       "afterwards    0.004648\n",
+       "whereby       0.005326\n",
+       "herein        0.006475\n",
+       "namely        0.007093\n",
+       "ought         0.007965\n",
+       "sometime      0.008621\n",
+       "beforehand    0.009261\n",
+       "thereafter    0.009460\n",
+       "wherein       0.009948\n",
+       "hence         0.011706\n",
+       "whereas       0.011791\n",
+       "whence        0.012857\n",
+       "lots          0.012865\n",
+       "otherwise     0.015880\n",
+       "etc           0.016479\n",
+       "therein       0.017665\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_results"
+    "df_coefs_list.mean().sort_values().head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average rank coef\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "word\n",
+       "hereafter     13.095238\n",
+       "thru          13.190476\n",
+       "noone         14.380952\n",
+       "whereby       19.952381\n",
+       "oftentimes    21.976190\n",
+       "herein        23.190476\n",
+       "afterwards    27.095238\n",
+       "namely        28.119048\n",
+       "ought         29.380952\n",
+       "wherein       30.714286\n",
+       "thereafter    32.714286\n",
+       "hence         33.142857\n",
+       "beforehand    34.380952\n",
+       "sometime      34.571429\n",
+       "whereas       41.523810\n",
+       "whence        42.523810\n",
+       "lots          49.000000\n",
+       "otherwise     50.761905\n",
+       "latter        51.047619\n",
+       "therein       51.880952\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_coefs_list.rank(axis=1).mean(axis=0).sort_values().head(20)"
    ]
   },
   {
@@ -527,11 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pronoun_figname = \"figures/frequencies/pronouns_heatmap.png\"\n",
+    "pronoun_figname = \"figures/word_frequencies/pronouns_heatmap.png\"\n",
     "if not os.path.exists(pronoun_figname):\n",
     "    pronouns = [\n",
     "        \"he\",\n",
@@ -591,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
