update to final notebook

--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,6 +286,11 @@
     "\n",
     "    # Logistic regression model coefficients\n",
     "    coefs = model.best_estimator_.coef_.squeeze()\n",
+    "\n",
+    "    # For multiclass, return the average of the absolute values of the coefficients\n",
+    "    if len(authors) > 2:\n",
+    "        coefs = np.mean(np.abs(coefs), axis=0)\n",
+    "\n",
     "    used_function_words = z_scores_transformer.get_used_function_words()\n",
     "    df_coefs = pd.DataFrame({\"word\": used_function_words, \"coef\": coefs})\n",
     "    return df_test, df_coefs"
@@ -302,7 +307,15 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 42/42 [01:01<00:00,  1.46s/it] \n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -453,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,43 +499,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "word\n",
-       "thru          0.002151\n",
-       "hereafter     0.002691\n",
-       "noone         0.002962\n",
-       "oftentimes    0.004042\n",
-       "afterwards    0.004648\n",
-       "whereby       0.005326\n",
-       "herein        0.006475\n",
-       "namely        0.007093\n",
-       "ought         0.007965\n",
-       "sometime      0.008621\n",
-       "beforehand    0.009261\n",
-       "thereafter    0.009460\n",
-       "wherein       0.009948\n",
-       "hence         0.011706\n",
-       "whereas       0.011791\n",
-       "whence        0.012857\n",
-       "lots          0.012865\n",
-       "otherwise     0.015880\n",
-       "etc           0.016479\n",
-       "therein       0.017665\n",
+       "in             0.254228\n",
+       "here           0.238299\n",
+       "an             0.229257\n",
+       "and            0.225788\n",
+       "a              0.214595\n",
+       "of             0.214263\n",
+       "as             0.209407\n",
+       "to             0.204849\n",
+       "is             0.173815\n",
+       "moreover       0.158036\n",
+       "this           0.156179\n",
+       "that           0.155051\n",
+       "with           0.153098\n",
+       "not            0.150558\n",
+       "furthermore    0.150114\n",
+       "which          0.148979\n",
+       "despite        0.148544\n",
+       "how            0.142244\n",
+       "it             0.140667\n",
+       "when           0.139862\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_coefs_list.mean().sort_values().head(20)"
+    "df_coefs_list.mean().sort_values(ascending=False).head(20)"
    ]
   },
   {
@@ -534,43 +547,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "word\n",
-       "hereafter     13.095238\n",
-       "thru          13.190476\n",
-       "noone         14.380952\n",
-       "whereby       19.952381\n",
-       "oftentimes    21.976190\n",
-       "herein        23.190476\n",
-       "afterwards    27.095238\n",
-       "namely        28.119048\n",
-       "ought         29.380952\n",
-       "wherein       30.714286\n",
-       "thereafter    32.714286\n",
-       "hence         33.142857\n",
-       "beforehand    34.380952\n",
-       "sometime      34.571429\n",
-       "whereas       41.523810\n",
-       "whence        42.523810\n",
-       "lots          49.000000\n",
-       "otherwise     50.761905\n",
-       "latter        51.047619\n",
-       "therein       51.880952\n",
+       "and            39.333333\n",
+       "of             42.809524\n",
+       "a              42.857143\n",
+       "as             43.095238\n",
+       "in             49.476190\n",
+       "this           50.285714\n",
+       "with           51.238095\n",
+       "an             53.952381\n",
+       "is             55.809524\n",
+       "despite        56.952381\n",
+       "here           57.000000\n",
+       "to             60.333333\n",
+       "it             60.666667\n",
+       "that           64.523810\n",
+       "through        65.523810\n",
+       "not            65.619048\n",
+       "which          65.619048\n",
+       "moreover       65.952381\n",
+       "furthermore    69.761905\n",
+       "he             71.190476\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_coefs_list.rank(axis=1).mean(axis=0).sort_values().head(20)"
+    "df_coefs_list.rank(axis=1, ascending=False).mean(axis=0).sort_values().head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi-class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [02:27<00:00, 73.69s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from itertools import product\n",
+    "from joblib import Parallel, delayed\n",
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from json import dumps\n",
+    "\n",
+    "\n",
+    "mc_results_filename = \"results/multiclass_classification.csv\"\n",
+    "\n",
+    "if os.path.exists(mc_results_filename):\n",
+    "    df_mc_results = pd.read_csv(mc_results_filename)\n",
+    "else:\n",
+    "    mc_results = []\n",
+    "    for _ in tqdm(range(N_TRIALS)):\n",
+    "        df_test, df_coefs = classify(\n",
+    "            df=df,\n",
+    "            authors=AUTHORS,\n",
+    "            function_words=function_words,\n",
+    "            return_df_coefs=True,\n",
+    "        )\n",
+    "\n",
+    "        df_test_json = dumps(df_test.to_json(orient=\"records\"))\n",
+    "        df_coefs_json = dumps(df_coefs.to_json(orient=\"records\"))\n",
+    "\n",
+    "        mc_results.append(\n",
+    "            {\n",
+    "                \"author1\": author1,\n",
+    "                \"author2\": author2,\n",
+    "                \"df_test\": df_test_json,\n",
+    "                \"df_coefs\": df_coefs_json,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    df_mc_results = pd.DataFrame(mc_results)\n",
+    "    df_mc_results.to_csv(mc_results_filename, index=False)"
    ]
   },
   {
@@ -582,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
